--- a/mksh/.mkshrc
+++ b/mksh/.mkshrc
@@ -15,15 +15,7 @@ gcm() {
     git commit -a -m "$1" && git push
 }
 
-PS1="$(printf "\033[0;34m%s\033[1;33m@\033[0;35m%s\033[0;35m \033[0;36m~ $ \033[0m" $(logname) $(hostname -s))"
-#PS1="$(printf "\033[0;34m%s\033[1;33m@\033[0;35m%s\033[0;35m \033[0;36m${PWD##*/} $ \033[0m" $(logname) $(hostname -s))"
-
-#function _cd {
-  #\cd "$@"
-  #PS2="$(printf "\033[0;34m%s\033[1;33m@\033[0;35m%s\033[0;35m \033[0;36m${PWD##*/} $ \033[0m" $(logname) $(hostname -s))"
-#}
-#alias cd=_cd
-#cd "$PWD"
+PS1="$(printf "\033[0;31m[\033[1;33m%s\033[1;32m@\033[0;34m%s\033[0;35m\033[0;31m]\033[0m$ " $(logname) $(hostname -s))"
 
 HISTFILE="$HOME/.mksh_history"
 HISTSIZE=100000
