--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,13 +27,11 @@ bind-key -n C-M-k kill-window
 
 bind -n C-q previous-window
 bind -n C-w next-window
-
-setw -g window-status-format " [ ] #I #(echo #{?pane_path,#{pane_path},#{pane_current_path}} | awk -F/ '{print $(NF)}') #{?window_zoomed_flag,(Z),} "
-setw -g window-status-current-format " [*] #I #(echo #{?pane_path,#{pane_path},#{pane_current_path}} | awk -F/ '{print $(NF)}') #{?window_zoomed_flag,(Z),} "
-setw -g window-status-current-style "bg=white"
-setw -g window-status-style "bg=white"
+setw -g window-status-format " [#I] "
+setw -g window-status-current-format " [#I] "
+setw -g window-status-current-style "fg=#ebdbb2"
+setw -g window-status-style "fg=#a89984"
 setw -g status-left ""
-setw -g status-right ""
 set -g status-bg black
 
 unbind-key -T root C-b
@@ -51,7 +49,6 @@ set-option -g renumber-windows on
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
