--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,18 +15,19 @@ set -g base-index 1
 set -g pane-base-index 1
 
 bind 'v' split-window -v -c "#{?pane_path,#{pane_path},#{pane_current_path}}"
-bind 'h' split-window -h -c "#{?pane_path,#{pane_path},#{pane_current_path}}"
+bind 's' split-window -h -c "#{?pane_path,#{pane_path},#{pane_current_path}}"
 bind 'c' new-window -a -c "#{?pane_path,#{pane_path},#{pane_current_path}}"
-bind 'x' kill-pane 
-bind 'k' kill-window
-bind -n C-h select-pane -t :.+
-bind -n C-q previous-window
-bind -n C-w next-window
+bind 'x' kill-pane
+bind 'q' kill-window
+bind -r 'l' next-window
+bind -r 'h' previous-window
+bind -r 'j' select-pane -t .+1
+bind -r 'k' select-pane -t .-1
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind -n S-Left { swap-window -t -1; previous-window }
-bind -n S-Right { swap-window -t +1; next-window }
+bind -r 'n' { swap-window -t -1; previous-window }
+bind -r 'm' { swap-window -t +1; next-window }
 bind-key -n C-M-l { new-window -a ; send-keys 'neomutt ; exit' ENTER }
 bind-key -n C-M-s { new-window -a ; send-keys 'ncmpcpp ; exit' ENTER }
 bind-key -T prefix o send-keys C-a x
