--- a/mksh/.mkshrc
+++ b/mksh/.mkshrc
@@ -22,7 +22,7 @@ gcm() {
     git commit -a -m "$1" && git push
 }
 
-PS1="$(printf "\033[0;31m[\033[1;33m%s\033[0;32m@\033[0;34m%s \033[0;35m\${PWD}\\033[0;35m\033[0;31m]\033[0m\n$ " $(logname) $(hostname))"
+PS1="$(print '\033[0;31m[\033[1;33m${USER:=$(id -un)}''\033[0;32m@\033[0;34m${HOSTNAME:=$(hostname -s)}:' '\033[0;35m${PWD/#"$HOME"/\~}\033[0;31m]\033[0m\n$ ' )"
 
 HISTFILE="$HOME/.mksh_history"
 HISTSIZE=100000
