--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,11 @@ set-window-option -g mode-keys vi
 set-window-option -g pane-base-index 1
 setw -g window-status-format " [#I] "
 setw -g window-status-current-format " [#I] "
-setw -g window-status-current-style "fg=#ebdbb2"
-setw -g window-status-style "fg=#a89984"
+setw -g window-status-current-style "fg=#e8e8e8"
+setw -g window-status-style "fg=#888888"
 setw -g status-left "" 
 setw -g status-right "" 
-set -g status-bg "#282828"
+set -g status-bg "#181818"
 set -g default-terminal "xterm-256color"
 set -g prefix C-a
 set -g mouse on
