--- a/mksh/.mkshrc
+++ b/mksh/.mkshrc
@@ -57,3 +57,4 @@ alias btc='bluetoothctl connect'
 alias xbi='sudo xbps-install'
 alias xbr='sudo xbps-remove -R'
 alias xbq='sudo xbps-query -Rs'
+alias psm='pulsemixer'
